--- a/lib/pedrofonsecadev_web/live/home/home_live.html.heex
+++ b/lib/pedrofonsecadev_web/live/home/home_live.html.heex
@@ -1,5 +1,5 @@
 <div>
-    <div class="flex flex-col gap-2 mb-6">
+    <div class="flex flex-col gap-2 mb-2 md:mb-6">
         <.link href={URI.parse("https://www.linkedin.com/in/pedro-henrique-fonseca-991812206")} target="blank">
             <.button class="w-full">LinkedIn</.button>
         </.link>
@@ -7,7 +7,7 @@
             <.button class="w-full">Github</.button>
         </.link>
     </div>
-    <div class="flex">
+    <div class="flex flex-wrap-reverse md:flex-nowrap">
         <div class="flex w-full flex-col gap-2">
             <.link patch={~p"/projects"} class="text-lg font-semibold">explore projects
                 <.icon name="hero-arrow-right" />
@@ -19,12 +19,12 @@
                 <.icon name="hero-arrow-right" />
             </.link>
         </div>
-        <div class="flex flex-col gap-2 w-full items-end">
-            <.link href={~p"/pdf/CV-eng.pdf"} target="blank">
-                <.button class="px-8">Download CV</.button>
+        <div class="flex flex-col gap-2 w-full items-end mb-6 md:mb-0">
+            <.link href={~p"/pdf/CV-eng.pdf"} class="w-full md:w-auto" target="blank">
+                <.button class="px-8 w-full md:w-auto">Download CV</.button>
             </.link>
-            <.link href={~p"/pdf/CV-pt_br.pdf"} target="blank">
-                <.button class="px-8">Download Portuguese CV</.button>
+            <.link href={~p"/pdf/CV-pt_br.pdf"} class="w-full md:w-auto" target="blank">
+                <.button class="px-8 w-full md:w-auto">Download CV (PT-BR)</.button>
             </.link>
         </div>
     </div>
