feat: improve ui

--- a/lib/pedrofonsecadev_web/live/projects/projects_live.html.heex
+++ b/lib/pedrofonsecadev_web/live/projects/projects_live.html.heex
@@ -1,9 +1,16 @@
 <div>
     <div class="flex flex-col gap-8 mb-4">
         <div>
-            <p class="text-3xl font-bold mb-2">
-                GroupsChat
-            </p>
+            <div class="flex justify-between items-center">
+                <p class="text-3xl font-bold mb-2">
+                    GroupsChat
+                </p>
+                <div class="flex gap-2 mb-2 h-8">
+                    <.badge>elixir</.badge>
+                    <.badge>phoenix</.badge>
+                    <.badge>phoenix live view</.badge>
+                </div>
+            </div>
             <div class="mb-2">
                 <img src="images/groupschat.png" class="w-[400px]" alt="">
             </div>
@@ -12,45 +19,49 @@
                 simple
                 and fast using UUID. This project was one of my first projects with Elixir and Phoenix LiveView.
             </p>
-            <div class="flex gap-0.5 mb-2">
-                <.badge>elixir</.badge>
-                <.badge>phoenix</.badge>
-                <.badge>phoenix live view</.badge>
-            </div>
             <.link href={URI.parse("https://github.com/pedrohfonseca81/groups_chat")} target="blank">
                 <.button>READ MORE</.button>
             </.link>
         </div>
+        <hr />
         <div>
-            <p class="text-3xl font-bold mb-2">
-                Livelinks
-            </p>
+            <div class="flex justify-between items-center">
+                <p class="text-3xl font-bold mb-2">
+                    Livelinks
+                </p>
+                <div class="flex gap-2 mb-2 h-8">
+                    <.badge>elixir</.badge>
+                    <.badge>phoenix</.badge>
+                    <.badge>phoenix live view</.badge>
+                </div>
+            </div>
             <div class="mb-2">
                 <img src="images/livelinks.png" class="w-[400px]" alt="">
             </div>
             <p class="text-base mb-2">
                 Livelink is a minimalist linktree project made with Phoenix Liveview.
             </p>
-            <div class="flex gap-0.5 mb-2">
-                <.badge>elixir</.badge>
-                <.badge>phoenix</.badge>
-                <.badge>phoenix live view</.badge>
-            </div>
+
             <.link href={URI.parse("https://github.com/pedrohfonseca81/livelinks")} target="blank">
                 <.button>READ MORE</.button>
             </.link>
         </div>
+        <hr />
         <div>
-            <p class="text-3xl font-bold mb-2">
-                Laravel Blend
-            </p>
-            <p class="text-base mb-2">
-                Laravel Blend is a package under development for startup Laravel applications using only PHP and Esbuild. The library objective is remove the NodeJS requirement. 
-            </p>
-            <div class="flex gap-0.5 mb-2">
-                <.badge>laravel</.badge>
-                <.badge>esbuild</.badge>
+            <div class="flex justify-between items-center">
+                <p class="text-3xl font-bold mb-2">
+                    Laravel Blend
+                </p>
+                <div class="flex gap-2 mb-2 h-8">
+                    <.badge>laravel</.badge>
+                    <.badge>esbuild</.badge>
+                </div>
             </div>
+            <p class="text-base mb-2">
+                Laravel Blend is a package under development for startup Laravel applications using only PHP and
+                Esbuild. The library objective is remove the NodeJS requirement.
+            </p>
+
             <.link href={URI.parse("https://github.com/pedrohfonseca81/laravel-blend")} target="blank">
                 <.button>READ MORE</.button>
             </.link>
