--- a/lib/pedrofonsecadev_web/components/layouts/app.html.heex
+++ b/lib/pedrofonsecadev_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <header x-data="{ showMenu: false }">
-  <div class="w-full flex justify-center">
+  <div class="w-full my-2 flex justify-center">
     <div class="w-5/6 md:w-1/2 h-12 flex justify-between items-center">
       <.link patch={~p"/"}>
         <h3 class="text-lg">pedrofonseca.dev</h3>
