feat: add flex-wrap to projects sections

--- a/lib/pedrofonsecadev_web/live/projects/projects_live.html.heex
+++ b/lib/pedrofonsecadev_web/live/projects/projects_live.html.heex
@@ -1,7 +1,7 @@
 <div>
     <div class="flex flex-col gap-8 mb-4">
         <div>
-            <div class="flex justify-between items-center">
+            <div class="flex flex-wrap justify-between items-center">
                 <p class="text-3xl font-bold mb-2">
                     GroupsChat
                 </p>
@@ -25,7 +25,7 @@
         </div>
         <hr />
         <div>
-            <div class="flex justify-between items-center">
+            <div class="flex flex-wrap justify-between items-center">
                 <p class="text-3xl font-bold mb-2">
                     Livelinks
                 </p>
@@ -48,7 +48,7 @@
         </div>
         <hr />
         <div>
-            <div class="flex justify-between items-center">
+            <div class="flex flex-wrap justify-between items-center">
                 <p class="text-3xl font-bold mb-2">
                     Laravel Blend
                 </p>
